@@ -1,5 +1,6 @@
 Revision history for App::MCP::Worker
 
+          - Added create_job test
           - Job creation API works with new Request object
           - Fixed copyright_holder
           - Replaced namespace::sweep with autoclean
